// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiHeaderSectionItem__button testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiHeaderSectionItemButton renders children 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span>
    Ahoy!
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a badge 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiNotificationBadge euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
  >
    1
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a dot 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <div
    class="euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--dot"
    color="accent"
    data-euiicon-type="dot"
  />
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="euiHeaderSectionItem__button"
  type="button"
>
  <span
    class="euiNotificationBadge euiNotificationBadge--subdued euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
  >
    1
  </span>
</button>
`;
